--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "java.project.sourcePaths": [
-        "Class/src"
+        "Class/src",
+        "L4ThemeParkQueue/src"
     ],
     "java.project.referencedLibraries": [
-        "/Users/deannayi/Documents/CS112/Class/lib/algs4.jar"
+        "/Users/deannayi/Documents/CS112/test-lib/junit-4.13.2.jar",
+        "/Users/deannayi/Documents/CS112/Class/lib/algs4.jar",
+        "/Users/deannayi/Documents/CS112/test-lib/hamcrest-core-1.3.jar"
     ]
 }
